# PasswordKeeper

./: .eslintrc.cjs  .gitignore  .prettierrc.cjs  404.html  Password Keeper Data File  README.md  biome.json  crowdin.yml  dep_iu.ps1  dep_iu.sh  index.html  init.ps1  init.sh  markdown-page.html  package-lock.json  package.json  sitemap.xml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs_deploy.yml  e2e_tests.yml  main-lint-test-deploy.yml  release-publish.yml  release-publish_draft.yml  release_publish.yml  test_docusaurus.yml
PasswordKeeper-help/: README.md  docusaurus.config.js  package-lock.json  package.json  tsconfig.json
PasswordKeeper-help/docs/: intro.md
PasswordKeeper-help/docs/getting-started/: _category_.json  basic-editing.md  editing.md  saving-opening-files.md  the-main-window.md
PasswordKeeper-help/docs/miscellaneous/: _category_.json  view-locking.md
PasswordKeeper-help/i18n/en/: code.json
PasswordKeeper-help/i18n/fi/: code.json
PasswordKeeper-help/src/pages/: index.js  index.tsx
Sample/: README.md  Sample File.pkd
assets/js/: 0e384e19.03f8f1ad.js  0e384e19.23ee14ef.js  0e384e19.eb1f7cb6.js  113c3c02.3da31c51.js  113c3c02.6c5de9b1.js  113c3c02.8a1ae5b2.js  113c3c02.c3c09140.js  3152febb.4d5db714.js  393be207.90c167b8.js  7eb4cefa.9677db38.js  935f2afb.08102aed.js  935f2afb.0f5fa48f.js  935f2afb.6e733fc1.js  db063bc4.20898adc.js  db063bc4.5716f780.js  db063bc4.94f3dfc0.js  db063bc4.9cbdfbf7.js  e2a5aa22.48dd4fbe.js  fa967835.de57926d.js  fb7bf4b7.60ae00ae.js  fc520cdf.accacdbc.js  main.15720245.js  main.4e627182.js  main.87d012fa.js  main.c23e1dd9.js  runtime~main.0756700f.js  runtime~main.9f5372ed.js  runtime~main.a885a263.js  runtime~main.cdbfea31.js
docs/: TODO.md  intro.html
docs/category/: getting-started.html
docs/category/getting-started/: index.html
docs/getting-started/: basic-editing.html  saving-opening-files.html  the-main-window.html
docs/getting-started/basic-editing/: index.html
docs/getting-started/the-main-window/: index.html
docs/intro/: index.html
fi/: 404.html  index.html  markdown-page.html  sitemap.xml
fi/assets/js/: 0e384e19.16d3eef0.js  0e384e19.43de2458.js  0e384e19.715fc85a.js  113c3c02.08514d4e.js  113c3c02.428438cd.js  113c3c02.456467c3.js  113c3c02.750bd44e.js  1df93b7f.5991ba0c.js  220a9ba0.f36ecc23.js  393be207.2c13a2db.js  393be207.486401c7.js  4845c7c6.c6f79fee.js  7eb4cefa.4d48d945.js  935f2afb.587dad08.js  935f2afb.c79df370.js  935f2afb.d3c3b714.js  db063bc4.0c8e2baf.js  db063bc4.0e2cd3be.js  db063bc4.6d96fc97.js  db063bc4.fe3dc7c3.js  ef6708e5.f48bc047.js  main.5a0086b1.js  main.5b28b8d6.js  main.8f3b6abc.js  main.d7ed4b54.js  runtime~main.4325fee3.js  runtime~main.d92cae6a.js  runtime~main.f8af16f1.js  runtime~main.facf5a52.js
fi/docs/: intro.html
fi/docs/category/: getting-started.html
fi/docs/getting-started/: basic-editing.html  saving-opening-files.html  the-main-window.html
fi/docs/intro/: index.html
fi/markdown-page/: index.html
markdown-page/: index.html
otpauth_test/: qr_code_data.txt
src/: App.css  App.tsx  I18n.ts  i18n.ts  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/capabilities/plugins/dialog/: plugin-dialog.json
src-tauri/capabilities/plugins/os/: os.json
src-tauri/capabilities/plugins/updater/: plugin-updater.json
src-tauri/capabilities/plugins/window-state/: window-state.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth2fa.rs  config.rs  encryption.rs  fonts.rs  lib.rs  main.rs  utils.rs
src/components/: Types.ts
src/components/app/: AppMenu.tsx  AppMenuToolbar.tsx  AppToolbar.tsx  PasswordInput.tsx  PasswordList.tsx  WindowTitle.tsx  antd-constants.ts
src/components/compound/: HtmlEditorCompound.tsx
src/components/reusable/: DisplayQrCodePopup.tsx  DragDropFile.tsx  HtmlEditor.tsx  Notify.ts  (+6 more)
src/context/: AntdThemeContext.tsx
src/hooks/: UseCaptureClipboardCopy.ts  UseCssStyle.ts  UseDocumentReady.ts  UseFocus.ts  UseFontFamily.ts  UsePasteImageMarkdown.ts  UseSecureStorage.ts  UseTauriDragAndDrop.ts  UseTauriUpdater.tsx  UseTimeSecond.ts  UseTimeout.ts  useTauriDragAndDrop.ts
src/img/: attribution_and_copyright.txt
src/misc/: DataUtils.ts  TestData.ts
src/types/: Enums.ts  PasswordEntry.ts  Settings.ts
src/utilities/: ColorConversion.ts  DomCssUtils.ts  DxUtils.ts  ThemeUtils.ts  hooks.ts
util/: copy_devextreme_styles.ps1  download_extract_fontawesome.ps1
webdriver/webdriverio/: README.md  package-lock.json  package.json  run_e2e.ps1  run_e2e.sh  tsconfig.json  wdio.conf.ts
(+81 files in other folders)
