[package]
name = "password_keeper"
version = "0.1.0"
description = "PasswordKeeper"
authors = ["VPKSoft", "Petteri Kautonen"]
license = "MIT"
repository = "https://github.com/VPKSoft/PasswordKeeper"
default-run = "password_keeper"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-all", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
tokio = { version = "1.27.0", features = ["full"] }
directories = "5.0.0"
aes-gcm-siv = { version = "0.11.1" }
anyhow = "1.0.70"
rand = "0.8.5"
rust-argon2 = "1.0.0"
zeroize = "1.6.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
