[package]
name = "password_keeper"
version = "0.1.0"
description = "PasswordKeeper"
authors = ["VPKSoft", "Petteri Kautonen"]
license = "MIT"
repository = "https://github.com/VPKSoft/PasswordKeeper"
default-run = "password_keeper"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.1", features = [ "clipboard-all", "updater", "window-set-size", "window-set-position", "shell-open", "dialog-all", "process-exit", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
tokio = { version = "1.39.3", features = ["full"] }
directories = "5.0.0"
aes-gcm-siv = { version = "0.11.1" }
anyhow = "1.0.86"
rand = "0.8.5"
rust-argon2 = "2.1.0"
zeroize = "1.8.1"
confy = "0.6.1"
serde_derive = "1.0.162"
totp-rs = { version = "5.6.0", features = ["otpauth"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
font-kit = "0.14.2"
arboard = "3.4.0"
time = "0.3.36"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
