[package]
name = "password_keeper"
version = "0.9.2"
description = "PasswordKeeper"
authors = ["VPKSoft", "Petteri Kautonen"]
license = "MIT"
repository = "https://github.com/VPKSoft/PasswordKeeper"
default-run = "password_keeper"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1.1", features = [] }
tokio = { version = "1.42.0", features = ["full"] }
directories = "5.0.1"
aes-gcm-siv = { version = "0.11.1" }
anyhow = "1.0.94"
rand = "0.8.5"
rust-argon2 = "2.1.0"
zeroize = "1.8.1"
serde_derive = "1.0.215"
totp-rs = { version = "5.6.0", features = ["otpauth"] }
tauri-plugin-window-state = "=2.0.2"
font-kit = "0.14.2"
arboard = "3.4.1"
time = "0.3.37"
tauri-plugin-updater = "2.1.0"
tauri-plugin-dialog = "2.0.4"
tauri-plugin-process = "2.0.1"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-os = "2.0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.1.0"
tauri-plugin-shell = "2.0.2"
